# s19_app

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT_RULES.md  README.md  REQUIREMENTS.md  project.toml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.dev-flow/: 02-review.md  04-validation.md  BACKLOG.md  state.json
.dev-flow/03-increments/: increment-001.md  increment-002.md  increment-004.md
.dev-flow/06-docs/: traceability-matrix.md
.dev-flow/2026-05-05-batch-01/: 01-requirements.md  04-validation.md  05-postmortem.md  state.json
.dev-flow/2026-05-20-batch-02/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state.json
.dev-flow/2026-05-20-batch-02/design-input/handoff/: CLAUDE.md  PLAN.md  README.md  pyproject.toml
.dev-flow/2026-05-20-batch-02/design-input/handoff/src/hexlab/: __init__.py  app.py  styles.tcss
.dev-flow/2026-05-20-batch-02/design-input/handoff/src/hexlab/core/: __init__.py  sample_data.py
.dev-flow/2026-05-20-batch-02/design-input/handoff/src/hexlab/screens/: __init__.py  workspace.py
.dev-flow/2026-05-20-batch-02/design-input/handoff/src/hexlab/widgets/: __init__.py  command_bar.py  hex_view.py  inspector.py  memory_map.py  rail.py
.dev-flow/2026-05-21-batch-03/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state.json
.dev-flow/2026-05-21-batch-04/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state.json
.dev-flow/2026-05-26-batch-05/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-09-batch-06/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-10-batch-07/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-11-batch-08/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-11-batch-09/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-13-batch-10/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-14-batch-11/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  state-snapshot-at-close.json
.dev-flow/2026-06-16-batch-12/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state-snapshot-at-close.json
.dev-flow/2026-06-17-batch-13/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state-snapshot-at-close.json
.dev-flow/2026-06-23-batch-14/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state-snapshot-at-close.json
.dev-flow/2026-06-24-batch-15/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state-snapshot-at-close.json
.dev-flow/2026-06-25-batch-16/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state-snapshot-at-close.json
.dev-flow/2026-06-26-batch-17/: PLAN.md  (+5 more)
.fast-dev-flow/: ADR-flow-builder-tracer.md  spec.md
docs/: README.md  architecture.md  engineering-rules.md  overview.md
examples/: MANIFEST.md  crc_config.example.json  prg.s19  synthetic_update_test1.mac
prototypes/: NOTES.md  crc_designer.b59.inapp_prototype.py  crc_designer.blocks.excalidraw  crc_designer.flow.excalidraw  crc_designer.prototype.py  crc_designer.screen.prototype.html  fb_p1_flow_persistence.DECISIONS.md  fb_p1_flow_persistence.NOTES.md  fb_p1_flow_persistence.mockup.py  fb_p1_flow_persistence.prototype.py  fb_p1_flow_persistence.viz.html  flow_builder.NOTES.md  flow_builder.prototype.py  flow_builder.screen.prototype.html  legend_n8.INVENTORY.md  legend_n8.NOTES.md  legend_n8.kimi.NOTES.md  legend_n8.kimi.prototype.py  legend_n8.kimi_prompt.txt  legend_n8.prototype.py  view-enhancements.prototype.html
s19_app/: cli.py  compare.py  core.py  hexfile.py  range_index.py  tui.py  utils.py
tests/: conftest.py  generate_large_samples.py  test_a2l_alignment_sizing.py  test_a2l_enriched.py  test_a2l_f841_cleanup.py  test_a2l_inline_axis_length.py  test_a2l_missing_length_fix.py  test_a2l_multiline_headers.py  test_a2l_record_layout_length.py  test_before_after_report.py  test_capped_text_area.py  test_cdfx_changelist.py  test_cdfx_display.py  test_cdfx_path_containment.py  test_cdfx_r_rules.py  test_cdfx_reader.py  test_cdfx_resolve.py  test_cdfx_roundtrip.py  test_cdfx_safety.py  test_cdfx_unchanged.py  test_cdfx_w_rules.py  test_cdfx_writer.py  test_change_service.py  test_changes_apply.py  test_changes_collision.py  test_changes_containment.py  test_changes_linkage.py  test_changes_schema.py  test_checks_engine.py  test_cli.py  test_color_policy_round_trip.py  test_compare_engine.py  test_compare_service.py  test_core_srecord_validation.py  test_crc_config.py  test_crc_designer_model.py  test_crc_designer_view.py  test_crc_engine.py  test_crc_job_upconvert.py  test_crc_kernel.py  (+106 more)
(+769 files in other folders)
