# S19_APP/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s19tool"
version = "0.1.0"
description = "A CLI tool for visualizing and patching Motorola S19 files"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "rich>=13.0",
    "textual",
]

[project.scripts]
s19tui = "s19_app.tui:main"

[tool.setuptools.packages.find]
include = ["s19_app*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow perf smoke tests (deselect with -m 'not slow')",
]
