# S19_APP/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s19tool"
version = "0.1.0"
description = "A CLI tool for visualizing and patching Motorola S19 files"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "rich>=13.0",
    # Lower-bound floor (C-8 / OQ-13). Set to the currently-installed version
    # so nothing breaks; no upper ceiling. Required-minimum bound for the
    # dev-only pytest-textual-snapshot extra below.
    "textual>=8.0.2",
]

[project.optional-dependencies]
# Dev-only snapshot-testing extra (C-2 scoped exception, OQ-5 approved).
# pytest-textual-snapshot is NEVER added to [project] dependencies — it does
# not affect the s19tui runtime footprint. Install with: pip install -e .[dev]
# Version: pinned for CI-reproducible snapshot baselines (S-5 resolved).
dev = [
    "pytest-textual-snapshot==1.1.0",
]

[project.scripts]
s19tui = "s19_app.tui:main"

[tool.setuptools.packages.find]
include = ["s19_app*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow perf smoke tests (deselect with -m 'not slow')",
    "snapshot: marks pytest-textual-snapshot layout-drift tests (deselect with -m 'not snapshot')",
]
