# S19_APP/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s19tool"
version = "0.1.0"
description = "A CLI tool for visualizing and patching Motorola S19 files"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "rich>=13.0",
    # Lower-bound floor (C-8 / OQ-13). Set to the currently-installed version
    # so nothing breaks; no upper ceiling. Required-minimum bound for the
    # dev-only pytest-textual-snapshot extra below.
    "textual>=8.0.2",
]

[project.optional-dependencies]
# Dev-only snapshot-testing extra (C-2 scoped exception, OQ-5 approved).
# pytest-textual-snapshot is NEVER added to [project] dependencies — it does
# not affect the s19tui runtime footprint. Install with: pip install -e .[dev]
# Version: pinned for CI-reproducible snapshot baselines (S-5 resolved).
dev = [
    "pytest-textual-snapshot==1.1.0",
    # Pin the renderer exactly (batch-25): SVG snapshot baselines are
    # textual-version sensitive. The runtime floor above (textual>=8.0.2) has
    # no ceiling, so CI drifted to 8.2.8 and silently invalidated every
    # 2026-05-22 baseline. Pinning here (dev / snapshot env only; runtime stays
    # >=8.0.2) locks the baselines to a known-good render. To adopt a newer
    # textual: bump this pin, then regenerate via snapshot-regen.yml.
    "textual==8.2.8",
]

[project.scripts]
s19tui = "s19_app.tui:main"

[tool.setuptools.packages.find]
include = ["s19_app*"]

[tool.pytest.ini_options]
# Make the repo root importable so `from tests.conftest import ...` works
# under a bare `pytest` invocation (CI) exactly as it does under
# `python -m pytest` (which prepends the cwd to sys.path itself).
pythonpath = ["."]
markers = [
    "slow: marks tests as slow perf smoke tests (deselect with -m 'not slow')",
    "snapshot: marks pytest-textual-snapshot layout-drift tests (deselect with -m 'not snapshot')",
]
