[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlab"
version = "0.1.0"
description = "TUI for SREC / A2L / firmware patching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.79",
    "rich>=13.7",
    # Real domain deps for the full rewrite (commented out for the sketch):
    # "bincopy>=20",       # SREC / Intel-HEX parsing
    # "pya2l>=0.0.13",     # A2L symbol files
    # "crcmod>=1.7",       # parametric CRC engine
]

[project.scripts]
hexlab = "hexlab.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-textual-snapshot>=1",
    "textual-dev>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexlab"]

[tool.ruff]
line-length = 100
target-version = "py310"
